k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiredright-api-svc
spec:
  selector:
    app: hiredright-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
