k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiredright-web-svc
spec:
  selector:
    app: hiredright-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
