k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiredright-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - www.hiredright.com
        - api.hiredright.com
      secretName: hiredright-tls-secret
  rules:
    - host: www.hiredright.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hiredright-web-svc
                port:
                  number: 80
    - host: api.hiredright.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hiredright-api-svc
                port:
                  number: 8000
